# significance-unified

./: .gitignore  CLAUDE.md  README.md  WRITEUP.md  lakefile.lean  pyproject.toml
SignificanceUnified/: Basic.lean  CategoryTheory.lean  Consequences.lean  test.lean
src/sigml/: __init__.py  __main__.py  config.py  data.py  losses.py  model.py  report.py  train.py  unsup_data.py  unsup_losses.py  unsup_model.py  unsup_report.py  unsup_train.py
